1. Add figure in each case introduction of allocation 2. wrong word (budjet ->budget)

--- a/resource_allocation_app/templates/resource_allocation_app/budget_allocation_demo.html
+++ b/resource_allocation_app/templates/resource_allocation_app/budget_allocation_demo.html
@@ -60,7 +60,7 @@
 
     <form method="POST">
         {% csrf_token %}
-        <input type="hidden" name="problem_type" value="budjet" id="problem_type">
+        <input type="hidden" name="problem_type" value="budget" id="problem_type">
         <input type="hidden" name="num_items" value="{{ submitted_num_items }}">
 
         <div class="card mb-4">
