--- a/matching_assignment_app/templates/matching_assignment_app/lcd_cf_tft_large_scale_demo.html
+++ b/matching_assignment_app/templates/matching_assignment_app/lcd_cf_tft_large_scale_demo.html
@@ -31,7 +31,7 @@
           <div id="make_json_group" style="display:none;">
         {% endif %}
             <h4 class="mt-3">Generate New JSON Data</h4>
-            <p>아래 파라미터를 입력하여 대량 테스트용 JSON 데이터를 생성합니다.<p>
+            <p>아래 파라미터를 입력하여 대량 테스트용 JSON 데이터를 생성합니다.</p>
             <p>생성된 파일은 서버에 저장됩니다. 파일명은
                 <code>cf{num_cf_panels}_tft{num_tft_panels}_row{panel_rows}_col{panel_cols}_rate{defect_rate}_seq.json</code> 형식을 따릅니다.</p>
             <div class="form-row">
@@ -91,7 +91,8 @@
                  </small>
             </div>
         {% endif %}
-        <button type="submit" class="btn btn-info mt-3">Run Large-scale Matching</button>
+        <button type="submit" class="btn btn-primary btn-lg mt-3 mb-3">Run Large-scale Matching</button>
+
     </form>
 
     <hr>
