--- a/matching_assignment_app/templates/matching_assignment_app/lcd_cf_tft_small_scale_demo.html
+++ b/matching_assignment_app/templates/matching_assignment_app/lcd_cf_tft_small_scale_demo.html
@@ -139,7 +139,7 @@
                 Example: <code>{"cf_panels": [{"id": "CF1", "rows": 2, "cols": 2, "defect_map": [[0,1],[0,0]]}, ...], "tft_panels": [...]}</code>
             </small>
         </div>
-        <button type="submit" class="btn btn-success mt-2">Run Matching Simulation</button>
+        <button type="submit" class="btn btn-primary mt-3">Run Matching Simulation</button>
     </form>
 
     <hr class="my-4">
