--- a/puzzles_logic_app/templates/puzzles_logic_app/tsp_introduction.html
+++ b/puzzles_logic_app/templates/puzzles_logic_app/tsp_introduction.html
@@ -74,6 +74,18 @@
             </li>
         </ul>
     </div>
+
+    <h3>3. TSP Demo</h3>
+    <div class="card-body">
+        <p><strong>TSP Demo</strong>에서는 아래와 같은 기능을 직접 체험해볼 수 있습니다.</p>
+        <ul>
+            <li>방문할 도시 설정</li>
+            <li>최단 경로 정보 확인</li>
+        </ul>
+        <a href="{% url 'puzzles_logic_app:tsp_demo' %}" class="btn btn-success mt-2">
+            데모 페이지로 이동 &rarr;
+        </a>
+    </div>
 </div>
 {% endblock %}
 
