--- a/resource_allocation_app/templates/resource_allocation_app/budget_allocation_introduction.html
+++ b/resource_allocation_app/templates/resource_allocation_app/budget_allocation_introduction.html
@@ -90,7 +90,7 @@
             <li>각 투자 항목의 정보 입력</li>
             <li>최적 예산 분배 결과 확인</li>
         </ul>
-        <a href="{% url 'resource_allocation_app:budget_allocation_demo' %}" class="btn btn-primary mt-3">
+        <a href="{% url 'resource_allocation_app:budget_allocation_demo' %}" class="btn btn-success mt-2">
             데모 페이지로 이동 &rarr;
         </a>
     </div>
