--- a/resource_allocation_app/templates/resource_allocation_app/data_center_capacity_introduction.html
+++ b/resource_allocation_app/templates/resource_allocation_app/data_center_capacity_introduction.html
@@ -119,9 +119,9 @@
         <ul>
             <li>총 예산 및 항목 수 설정</li>
             <li>각 서버와 서비스 항목의 정보 입력</li>
-            <li>최적의 데이터 센터 용량 계획</li>
+            <li>최적의 데이터 센터 용량 계획 확인</li>
         </ul>
-        <a href="{% url 'resource_allocation_app:data_center_capacity_demo' %}" class="btn btn-primary mt-3">
+        <a href="{% url 'resource_allocation_app:data_center_capacity_demo' %}" class="btn btn-success mt-2">
             데모 페이지로 이동 &rarr;
         </a>
     </div>
