--- a/resource_allocation_app/templates/resource_allocation_app/nurse_rostering_introduction.html
+++ b/resource_allocation_app/templates/resource_allocation_app/nurse_rostering_introduction.html
@@ -16,7 +16,7 @@
 
     <p>
         <strong>간호사 스케줄링 문제</strong>는 병원과 같은 의료 기관에서 필수 인력을 유지하면서, 동시에 근무자들의 복잡한 요구사항과 규정을 만족시키는 월간 또는 주간 근무표를 작성하는 대표적인 스케줄링 및 할당 문제입니다.
-        이 문제는 환자의 안전을 위한 **필수 인력 충원(Coverage)**과 간호사들의 **근무 만족도 및 공정성** 사이의 균형을 맞추는 것이 핵심입니다.
+        이 문제는 환자의 안전을 위한 필수 인력 충원(Coverage)과 간호사들의 근무 만족도 및 공정성 사이의 균형을 맞추는 것이 핵심입니다.
     </p>
 
     <figure>
@@ -125,7 +125,7 @@
             <li>시프트 별 필요 인원 설정</li>
             <li>최적 근무표와 간호사별 근무일 수 결과</li>
         </ul>
-        <a href="{% url 'resource_allocation_app:nurse_rostering_demo' %}" class="btn btn-primary mt-3">
+        <a href="{% url 'resource_allocation_app:nurse_rostering_demo' %}" class="btn btn-success mt-2">
             데모 페이지로 이동 &rarr;
         </a>
     </div>
