--- a/routing_logistics_app/templates/routing_logistics_app/vrp_demo.html
+++ b/routing_logistics_app/templates/routing_logistics_app/vrp_demo.html
@@ -193,7 +193,7 @@
 
     {% if plot_data %}
     <div class="card mt-3">
-        <div class="card-header"><strong>경로 시각화</strong></div>
+        <div class="card-header"><strong>경로 시각화 (VRP)</strong></div>
         <div class="card-body">
             <div class="chart-container">
                 <canvas id="vrpRouteChart"></canvas>
