--- a/production_scheduling_app/templates/production_scheduling_app/lot_sizing_introduction.html
+++ b/production_scheduling_app/templates/production_scheduling_app/lot_sizing_introduction.html
@@ -53,7 +53,7 @@
     <div class="col-md-8 model-definition-content">
         <h4 class="model-definition-content"><strong>입력 데이터:</strong></h4>
         <ul>
-            <li> <strong>\( T \)</strong> : 생산 용량 계획 기간의 집합</li>
+            <li> <strong>\( t \in T \)</strong> : 생산 용량 계획 기간의 집합</li>
             <li> <strong>\( D_{t} \)</strong> : 기간 \( t \)에 수요량</li>
             <li> <strong>\( f_{t} \)</strong> : 기간 \( t \)에 고정 준비 비용</li>
             <li> <strong>\( c_{t} \)</strong> : 기간 \( t \)에 단위 당 생산 비용</li>
