--- a/production_scheduling_app/templates/production_scheduling_app/single_machine_introduction.html
+++ b/production_scheduling_app/templates/production_scheduling_app/single_machine_introduction.html
@@ -42,7 +42,7 @@
         <h4 class="model-definition-content"><strong>입력 데이터:</strong></h4>
         <ul>
             <li><strong>\( i, k \in \{1, 2, \dots, n\} \)</strong> : 작업(Job)의 인덱스. n은 총 작업의 수</li>
-            <li><strong>\( p_{j} \)</strong> : 작업 \( i \) 을 기계에서 처리하는데 걸리는 시간(Processing time)</li>
+            <li><strong>\( p_{i} \)</strong> : 작업 \( i \) 을 기계에서 처리하는데 걸리는 시간(Processing time)</li>
         </ul>
         <hr>
 
