--- a/resource_allocation_app/templates/resource_allocation_app/nurse_rostering_introduction.html
+++ b/resource_allocation_app/templates/resource_allocation_app/nurse_rostering_introduction.html
@@ -113,7 +113,7 @@
                 </div>
             </li>
         </ul>
-        <p>참고: 실제 모델에서는 "야간 근무 후 최소 16시간 휴식", "최대 5일 연속 근무" 등 훨씬 더 복잡하고 다양한 패턴 제약 조건들이 추가됩니다.
+        <p>실제 모델에서는 야간 근무 후 최소 16시간 휴식, 최대 5일 연속 근무 등 훨씬 더 복잡하고 다양한 패턴 제약 조건들이 추가됩니다.
         </p>
     </div>
 
