--- a/matching_assignment_app/templates/matching_assignment_app/transport_assignment_introduction.html
+++ b/matching_assignment_app/templates/matching_assignment_app/transport_assignment_introduction.html
@@ -54,6 +54,14 @@
 
     <h3>3. 수학적 모델</h3>
     <div class="col-md-8 model-definition-content">
+        <h4 class="model-definition-content"><strong>입력 데이터:</strong></h4>
+        <ul>
+            <li><strong>\( i \in \{1, 2, \dots, n\} \)</strong> : 드라이버의 인덱스. \( n \) 은 총 드라이버의 수</li>
+            <li><strong>\( j \in \{1, 2, \dots, m\} \)</strong> : 구역의 인덱스. \( m \) 은 총 구역의 수</li>
+            <li><strong>\( c_{ij} \)</strong> : 드라이버 \( i \) 가 구역 \( j \) 를 담당할 때 발생하는 비용 또는 시간</li>
+        </ul>
+        <hr>
+
         <h4 class="model-definition-content"><strong>결정 변수:</strong></h4>
         <ul>
             <li> <strong>\( x_{ij} \)</strong> : 드라이버 \( i \) 가 구역 \( j \) 에 할당되면 1, 아니면 0(이진 변수)</li>
@@ -62,15 +70,14 @@
 
         <h4 class="model-definition-content"><strong>목적 함수:</strong> 총 운송 시간 최소화</h4>
         <div class="math-block">
-            <p>$$\min \sum_{i=1}^{n} \sum_{j=1}^{n} c_{ij} x_{ij}$$</p>
-            <p>$$ \text{where } c_{ij} \text{ is the cost or time when driver } i \text{ is assigned to zone} j $$</p>
+            <p>$$\min \sum_{i=1}^{n} \sum_{j=1}^{m} c_{ij} \cdot x_{ij}$$</p>
         </div>
 
         <h4 class="model-definition-content"><strong>제약 조건:</strong></h4>
         <ul>
             <li><strong>기사 제약:</strong> 각 기사는 정확히 하나의 구역에 배정
                 <div class="math-block">
-                    $$\sum_{j=1}^{n} x_{ij} = 1 \quad \forall i$$
+                    $$\sum_{j=1}^{m} x_{ij} = 1 \quad \forall i$$
                 </div>
             </li>
             <li><strong>구역 제약:</strong> 각 구역은 정확히 한 명의 기사에게 배정
